force-app/main/default/objects/Compliance_Rule__mdt/Compliance_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Rule</label>
    <pluralLabel>Compliance Rules</pluralLabel>
</CustomObject>