force-app/main/default/objects/Compliance_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>KYC</fullName>
        </value>
        <value>
            <fullName>AML</fullName>
        </value>
        <value>
            <fullName>Digital Lending</fullName>
        </value>
        <value>
            <fullName>Fair Practice</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>