force-app/main/default/objects/Compliance_Rule__mdt/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <label>Mandatory</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>