force-app/main/default/objects/Compliance_Rule__mdt/fields/Regulation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Regulation_Reference__c</fullName>
    <label>Regulation Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>