force-app/main/default/objects/Compliance_Rule__mdt/fields/Regulator__c.field-meta.xml
<CustomField>
    <fullName>Regulator__c</fullName>
    <label>Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>RBI</fullName>
        </value>
        <value>
            <fullName>SEBI</fullName>
        </value>
        <value>
            <fullName>Internal</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>