force-app/main/default/objects/Compliance_Rule__mdt/fields/Validation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Validation_Logic__c</fullName>
    <label>Validation Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>